force-app/main/default/objects/FEC_Folder__c/FEC_Folder__c.object-meta.xml
<CustomObject>
    <label>Folder</label>
    <nameField>
        <displayFormat>F-{0000}</displayFormat>
        <label>Folder Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Folders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>