force-app/main/default/objects/FEC_Folder__c/fields/FEC_Folder_Label__c.field-meta.xml
<CustomField>
    <fullName>FEC_Folder_Label__c</fullName>
    <label>Folder Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>