force-app/main/default/objects/FEC_Folder__c/fields/FEC_Folder_Unique_Name__c.field-meta.xml
<CustomField>
    <fullName>FEC_Folder_Unique_Name__c</fullName>
    <label>Folder Unique Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>