force-app/main/default/objects/FEC_Folder__c/fields/FEC_Parent_Folder__c.field-meta.xml
<CustomField>
    <fullName>FEC_Parent_Folder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Folder</label>
    <referenceTo>FEC_Folder__c</referenceTo>
    <relationshipLabel>Folders</relationshipLabel>
    <relationshipName>Folders</relationshipName>
    <type>Lookup</type>
</CustomField>